<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_guide">About</string>
    <string name="about_guide_all_caps">ABOUT</string>
    <string name="about_project">About</string>
    <string name="about_project_all_caps">ABOUT</string>
    <string name="about_taxon_short">About</string>
    <string name="about_this_app">About</string>
    <string name="about_this_section">About This Section</string>
    <string name="about_this_species">About this Species</string>
    <string name="accept">Accept</string>
    <string name="activity">Activity</string>
    <string name="add">Add</string>
    <string name="add_comment">Add comment</string>
    <string name="add_edit_remark">Add/Edit Remark</string>
    <string name="add_id">Add identification</string>
    <string name="add_observation">Add observation</string>
    <string name="add_to_projects">Add to project(s)</string>
    <string name="aggregate">Aggregate</string>
    <string name="agree">Agree?</string>
    <string name="agree2">Agree</string>
    <string name="agree_all_caps">AGREE</string>
    <string name="airport">Airport</string>
    <string name="alert_message_use_biodiversity4all">Biodiversity4All is a member of the iNaturalist Network in Portugal. Local institutions supporting Biodiversity4All will have access to your email address and access to the true coordinates for observations that are publicly obscured or private. Please do not experimentally change your affiliation if you have more than 1000 observations. Would you like to change your affiliation?</string>
    <string name="alert_message_use_inaturalist">The main iNaturalist Network. Clicking OK will set your app as part of the global iNaturalist network.</string>
    <string name="alert_message_use_inaturalistcanada">iNaturalist Canada is a member of the iNaturalist Network in Canada. Local institutions supporting iNaturalist Canada will have access to your email address and access to the true coordinates for observations that are publicly obscured or private. Please do not experimentally change your affiliation if you have more than 1000 observations. Would you like to change your affiliation?</string>
    <string name="alert_message_use_inaturalistpanama">iNaturalist Panamá is a member of the iNaturalist Network in Panama. Local institutions supporting iNaturalist Panamá will have access to your email address and access to the true coordinates for observations that are publicly obscured or private. Please do not experimentally change your affiliation if you have more than 1000 observations. Would you like to change your affiliation?</string>
    <string name="alert_message_use_naturalista">NaturaLista is a member of the iNaturalist Network in Mexico. Local institutions supporting NaturaLista will have access to your email address and access to the true coordinates for observations that are publicly obscured or private. Please do not experimentally change your affiliation if you have more than 1000 observations. Would you like to change your affiliation?</string>
    <string name="alert_message_use_naturalistacolombia">Naturalista is a member of the iNaturalist Network in Colombia. Local institutions supporting Naturalista will have access to your email address and access to the true coordinates for observations that are publicly obscured or private. Please do not experimentally change your affiliation if you have more than 1000 observations. Would you like to change your affiliation?</string>
    <string name="alert_message_use_naturewatchnz">iNaturalist NZ is a member of the iNaturalist Network in New Zealand. Local institutions supporting iNaturalist NZ will have access to your email address and access to the true coordinates for observations that are publicly obscured or private. Please do not experimentally change your affiliation if you have more than 1000 observations. Would you like to change your affiliation?</string>
    <string name="alert_sign_out">"Are you sure you want to sign out? This will delete all your observations on this device. It will not affect any observations you've uploaded to iNaturalist."</string>
    <string name="alert_unsupported_media_type">Sorry, but there was a problem loading the photo from this source</string>
    <string name="all_guides">All</string>
    <string name="all_guides_all_caps">ALL</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="amphibians">Amphibians</string>
    <string name="amplitude_api_key">7a45b3b3bd41aaab4869bbbf370b6289</string>
    <string name="annotation_name">Annotation Name</string>
    <string name="annotation_name_life_stage">Life Stage</string>
    <string name="annotation_name_plant_phenology">Plant Phenology</string>
    <string name="annotation_name_sex">Sex</string>
    <string name="annotation_value_adult">Adult</string>
    <string name="annotation_value_budding">Budding</string>
    <string name="annotation_value_egg">Egg</string>
    <string name="annotation_value_female">Female</string>
    <string name="annotation_value_flowering">Flowering</string>
    <string name="annotation_value_fruiting">Fruiting</string>
    <string name="annotation_value_juvenile">Juvenile</string>
    <string name="annotation_value_larva">Larva</string>
    <string name="annotation_value_male">Male</string>
    <string name="annotation_value_nymph">Nymph</string>
    <string name="annotation_value_pupa">Pupa</string>
    <string name="annotation_value_subimago">Subimago</string>
    <string name="annotation_value_teneral">Teneral</string>
    <string name="annotations">Annotations</string>
    <string name="any">Any</string>
    <string name="app_name">iNaturalist</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="arachnids">Arachnids</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="are_you_sure_you_want_to_flag_as_captive">Are you sure you want to flag this observation as captive/cultivated? (Pressing yes will also close the observation viewer window)</string>
    <string name="auto_upload_description">Auto-upload new observations and edits to observations</string>
    <string name="automatic_upload">Automatic Upload (Auto Sync)</string>
    <string name="contact_support">Contact Support</string>
    <string name="credits_title">Credits</string>
    <string name="description_all_caps">DESCRIPTION</string>
    <string name="do_you_think_this_could_be">Is the evidence provided enough to confirm this is &lt;b>%1$s&lt;/b>?</string>
    <string name="donate_to_inaturalist">Donate to iNaturalist</string>
    <string name="download_for_offline_use">Download for offline use</string>
    <string name="downloading">Downloading...</string>
    <string name="editor">Editor</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="i_dont_know_but">"I don't know but I'm sure this is &lt;b>%1$s&lt;/b>."</string>
    <string name="inat_about_title">iNaturalist is a joint initiative by the California Academy of Sciences and the National Geographic Society.</string>
    <string name="inat_credits">iNaturalist exists thanks to every single person who participates in our community. The people who build the software, design the interfaces, maintain our infrastructure, support the community, and foster collaborations are Yaron Budowski, Amanda Bullington, Tony Iwane, Patrick Leary, Scott Loarie, Abhas Misraraj, Carrie Seltzer, Alex Shepard, and Ken-ichi Ueda.&lt;br/>&lt;br/>CalTech and Cornell Tech helped develop the computer vision system that suggests identifications from photographs. We thank Grant Van Horn, Serge Belongie, and Pietro Perona for advancing the computer vision research. More information can be found at &lt;a href=http://www.visipedia.org>visipedia.org&lt;/a>. Special thanks to NVIDIA for additional assistance.</string>
    <string name="inat_network">iNaturalist Network</string>
    <string name="introducing_missions">Introducing Missions!</string>
    <string name="language">Language</string>
    <string name="lets_get_started">"Let's get started!"</string>
    <string name="license">License</string>
    <string name="login_signup">Log In / Sign Up</string>
    <string name="missions_onboarding_description">Missions are realtime recommendations of what to look for around you. This way you can discover species new to you! (Requires connectivity)</string>
    <string name="no_but_it_is_a_member_of_taxon">No, but it is a member of &lt;b>%1$s&lt;/b>.</string>
    <string name="no_comments">No comments/identifications yet</string>
    <string name="no_observations_found">No observations found</string>
    <string name="no_projects">No projects found!</string>
    <string name="ok_got_it">Ok, got it!</string>
    <string name="photos">&lt;b>Photos:&lt;/b> %1$s</string>
    <string name="prefers_scientific_name_first">Show scientific names first</string>
    <string name="prefers_scientific_name_first_description">Show scientific names before common names.</string>
    <string name="search_projects">Search projects...</string>
    <string name="see_more_observations">See more observations</string>
    <string name="skip_for_now">Skip for Now</string>
    <string name="sources_and_attribution">Sources and Attribution</string>
    <string name="suggest_species">Suggest Species</string>
    <string name="suggest_species_description">Suggest species based on visual similarity to photos.</string>
    <string name="text">&lt;b>Text:&lt;/b> %1$s</string>
    <string name="use_device_language_settings">Use device language settings</string>
    <string name="version">Version</string>
    <string name="view_nearby_observations">View Nearby Observations</string>
</resources>