<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textColor="#ff000000" android:id="@id/question" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/do_you_think_this_could_be" />
    <RadioGroup android:layout_width="wrap_content" android:layout_height="wrap_content">
        <RadioButton android:id="@id/no_disagreement" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/i_dont_know_but" />
        <RadioButton android:id="@id/disagreement" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/no_but_it_is_a_member_of_taxon" />
    </RadioGroup>
</LinearLayout>