<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="#fff5f5f5" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="12.0dip" android:text="@string/inat_about_title" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:layout_width="0.0dip" android:layout_height="100.0dip" android:layout_marginRight="24.0dip" android:src="@drawable/cas_logo" android:layout_weight="1.0" />
            <ImageView android:layout_width="0.0dip" android:layout_height="100.0dip" android:src="@drawable/nat_geo_logo" android:layout_weight="1.0" />
        </LinearLayout>
        <View android:background="#ffe9e9e9" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="10.0dip" android:layout_marginBottom="16.0dip" />
        <TextView android:textSize="14.0sp" android:textColor="#ff000000" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="12.0dip" android:text="@string/credits_title" />
        <TextView android:textSize="14.0sp" android:textColor="#ff000000" android:id="@id/inat_credits" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="12.0dip" android:text="@string/inat_credits" />
    </LinearLayout>
</ScrollView>