<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="#ff74ac00" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:background="#ff74ac00" android:padding="39.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <ImageView android:id="@id/icon" android:layout_width="69.0dip" android:layout_height="82.0dip" android:layout_marginTop="11.0dip" android:src="@drawable/ic_flag_black_48dp" android:scaleType="fitXY" android:tint="#ffa4e817" android:layout_centerHorizontal="true" />
        <TextView android:textSize="24.0sp" android:textColor="#ffffffff" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="63.0dip" android:text="@string/introducing_missions" android:layout_below="@id/icon" android:layout_centerInParent="true" />
        <TextView android:textSize="13.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/description" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:text="@string/missions_onboarding_description" android:layout_centerHorizontal="true" />
        <Button android:textSize="18.0sp" android:textColor="#ffffffff" android:id="@id/got_it" android:background="@drawable/circular_button_light_green" android:layout_width="fill_parent" android:layout_height="48.0dip" android:layout_marginTop="81.0dip" android:text="@string/ok_got_it" android:layout_centerHorizontal="true" />
    </LinearLayout>
</ScrollView>