<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#ff74ac00" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="0.65">
        <TextView android:textSize="35.0sp" android:textColor="#ffffffff" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lets_get_started" android:layout_centerInParent="true" />
        <ImageView android:layout_width="44.0dip" android:layout_height="wrap_content" android:layout_marginTop="50.0dip" android:src="@drawable/ic_gps_fixed_black_48dp" android:scaleType="fitCenter" android:tint="#ffffffff" android:layout_below="@id/title" android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <RelativeLayout android:paddingLeft="32.0dip" android:paddingRight="32.0dip" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginTop="20.0dip" android:layout_weight="0.35">
        <Button android:textSize="16.0sp" android:textColor="#ffffffff" android:id="@id/view_nearby_observations" android:background="@drawable/circular_button_light_green" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:layout_width="fill_parent" android:layout_height="40.0dip" android:text="@string/view_nearby_observations" android:layout_centerHorizontal="true" />
        <TextView android:textSize="16.0sp" android:textColor="#ffffffff" android:id="@id/skip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="50.0dip" android:text="@string/skip_for_now" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
    </RelativeLayout>
</LinearLayout>