<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/grid_container" android:background="#fff5f5f5" android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior" xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ProgressBar android:gravity="center" android:id="@id/loading_observations_grid" android:padding="30.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="50.0dip" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" style="?android:progressBarStyleLarge" />
    <TextView android:gravity="center" android:id="@id/observations_grid_empty" android:padding="30.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="50.0dip" android:text="@string/no_observations_found" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" />
    <org.inaturalist.android.GridViewExtended android:gravity="center" android:orientation="vertical" android:id="@id/observations_grid" android:layout_width="fill_parent" android:layout_height="fill_parent" android:horizontalSpacing="3.0dip" android:verticalSpacing="3.0dip" android:stretchMode="columnWidth" android:numColumns="3" />
    <Button android:textSize="16.0sp" android:textColor="@drawable/circular_button_text" android:layout_gravity="center_horizontal" android:id="@id/show_more_observations" android:background="@drawable/circular_button" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:layout_width="wrap_content" android:layout_height="40.0dip" android:layout_marginBottom="20.0dip" android:text="@string/see_more_observations" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
</RelativeLayout>