<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:id="@id/bottom_bar" android:background="@drawable/actionbar_background" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/actionbar_height" android:layout_alignParentBottom="true">
        <Button android:textColor="#ff000000" android:gravity="start|center" android:id="@id/add_comment" android:background="@drawable/actionbar_btn" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/add_comment" android:layout_weight="1.0" android:drawableStart="@drawable/ic_action_chat" />
        <Button android:textColor="#ff000000" android:gravity="start|center" android:id="@id/add_id" android:background="@drawable/actionbar_btn" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/add_id" android:layout_weight="1.0" android:drawableStart="@drawable/ic_action_labels" />
    </LinearLayout>
    <ListView android:orientation="vertical" android:id="@android:id/list" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/bottom_bar" />
    <ProgressBar android:gravity="center" android:id="@id/progress" android:padding="30.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true" style="?android:progressBarStyleLarge" />
    <TextView android:gravity="center" android:id="@android:id/empty" android:padding="30.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/no_comments" android:layout_centerInParent="true" style="@android:style/TextAppearance.Medium" />
</RelativeLayout>