<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="#ff2f3133" android:paddingLeft="10.0dip" android:paddingTop="10.0dip" android:paddingRight="20.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="12.0dip" android:textColor="#ffffffff" android:id="@id/description_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/description_all_caps" />
    </LinearLayout>
    <TextView android:textSize="14.0dip" android:textColor="#ff000000" android:id="@id/description" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginBottom="10.0dip" android:text="Some long description of the guide and some more lines regarding it." />
    <LinearLayout android:orientation="vertical" android:background="#ff2f3133" android:paddingLeft="10.0dip" android:paddingTop="10.0dip" android:paddingRight="20.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="12.0dip" android:textColor="#ffffffff" android:id="@id/about_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/about_guide_all_caps" />
    </LinearLayout>
    <RelativeLayout android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="14.0dip" android:textStyle="bold" android:textColor="#ff36b859" android:id="@id/editorName" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="username" android:layout_centerVertical="true" />
        <TextView android:textSize="16.0dip" android:textStyle="bold" android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/editor" android:layout_centerVertical="true" />
    </RelativeLayout>
    <RelativeLayout android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="14.0dip" android:textStyle="bold" android:textColor="#ff36b859" android:id="@id/license" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="some license" android:layout_centerVertical="true" />
        <TextView android:textSize="16.0dip" android:textStyle="bold" android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/license" android:layout_centerVertical="true" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/downloadGuide" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:id="@id/downloadGuideImage" android:layout_width="46.0dip" android:layout_height="wrap_content" android:src="@drawable/ic_action_download" android:scaleType="fitStart" android:layout_centerVertical="true" />
        <TextView android:textSize="16.0dip" android:textStyle="bold" android:textColor="#ff000000" android:id="@id/downloadTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/download_for_offline_use" />
        <TextView android:textSize="15.0dip" android:textColor="#ff7f7f7f" android:id="@id/downloadSubtitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="3.0dip" android:text="1.71 MB" android:layout_below="@id/downloadTitle" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/downloadingGuide" android:padding="10.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ProgressBar android:id="@id/loadingSpinner" android:layout_width="wrap_content" android:layout_height="wrap_content" android:indeterminate="true" android:layout_centerVertical="true" style="?android:progressBarStyleLarge" />
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerVertical="true">
            <ProgressBar android:textColor="#ff000000" android:id="@id/downloadingProgress" android:layout_width="fill_parent" android:layout_height="wrap_content" android:max="100" style="?android:progressBarStyleHorizontal" />
            <TextView android:textSize="15.0dip" android:textColor="#ff7f7f7f" android:id="@id/downloadingSubtitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="0.0dip" android:text="@string/downloading" android:layout_below="@id/downloadingProgress" />
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>