<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Gallery android:id="@id/gallery" android:layout_width="fill_parent" android:layout_height="220.0dip" android:spacing="5.0dip" />
        <TextView android:textSize="30.0dip" android:textStyle="bold" android:textColor="#ff000000" android:id="@id/displayName" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="Display name long" android:textIsSelectable="true" />
        <TextView android:textSize="18.0dip" android:textStyle="italic" android:textColor="#ff888888" android:id="@id/name" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="Scientific Name" android:textIsSelectable="true" />
        <LinearLayout android:orientation="vertical" android:id="@id/sections" android:paddingTop="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <LinearLayout android:orientation="vertical" android:id="@id/sources_and_attrs_section" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="24.0dip" android:textColor="#ff888888" android:id="@id/sources_title" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/sources_and_attribution" />
            <TextView android:textSize="14.0dip" android:textColor="#ff888888" android:id="@id/attributions_photos" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/photos" />
            <TextView android:textSize="14.0dip" android:textColor="#ff888888" android:id="@id/attributions_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/text" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>